# coinmarketcap_top100_bot

./: AGENTS.md  Cargo.toml  go.mod  go.sum  main.go  netlify.toml
bot/: bot.go  telegram_format_test.go  telegram_transport_test.go  template_test.go
docs/: swagger.json
netlify/functions/topn/: Cargo.toml  main.go  main_test.go
netlify/functions/topn/src/: main.rs
prompts/: newcoins.prompts.md
src/: lib.rs  main.rs
templates/: telegram_post_fallback.template.md
