[package]
name = "coinmarketcap_top100_bot"
version = "0.1.0"
edition = "2021"

[lib]
name = "coinmarketcap_top100_bot"
path = "src/lib.rs"

[[bin]]
name = "coinmarketcap_top100_bot"
path = "src/main.rs"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
env_logger = "0.11"
log = "0.4"
mongodb = "3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
urlencoding = "2"

[dev-dependencies]
tempfile = "3"
